--- a/my-turborepo/apps/my-app-app/package.json
+++ b/my-turborepo/apps/my-app-app/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3"
+    "@craco/craco": "^6.4.3",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
